--- a/Assets/index.html
+++ b/Assets/index.html
@@ -16,7 +16,8 @@
     <nav id="nav" class="padding-x" id="hero">
         <button class="open-menu"><i class="fas fa-bars"></i></button>
         <ul id="menu">
-            <li class="close-menu"><b><i style="color: var(--primary--color); font-size: 1.5rem; margin-bottom: 15px;" class="fas fa-close"></i></b></li>
+            <li class="close-menu"><b><i style="color: var(--primary--color); font-size: 1.5rem; margin-bottom: 15px;"
+                        class="fas fa-close"></i></b></li>
             <li><b><a href="#nav">بلاگر</a></b></li>
             <li><a href="#nav">خانه</a></li>
             <li><a href="#blogs">بلاگ ها</a></li>
@@ -73,10 +74,10 @@
                 <h2>بلاگ ها</h1>
             </div>
             <ul id="blogs-filter">
-                <li class="filter-active" data-filter="*">همه</li>
-                <li data-filter=".programming">برنامه نویسی</li>
-                <li data-filter=".skill">آموزش فنی</li>
-                <li data-filter=".technology">تکنولوژی</li>
+                <li id="all-fileds" class="filter-active">همه</li>
+                <li id="programming">برنامه نویسی</li>
+                <li id="skill">آموزش فنی</li>
+                <li id="technology">تکنولوژی</li>
             </ul>
             <div id="blogs-container">
                 <div class="blog-box programming">
@@ -289,7 +290,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="about-mission">
+                <div class="about-mission about-mission3">
                     <div class="mission-header">
                         <img src="./image/feature/feature3.jpg" alt="">
                     </div>
