--- a/Assets/index.html
+++ b/Assets/index.html
@@ -331,7 +331,7 @@
                                 <option value="technology">تکنولوژی</option>
                             </select>
                         </div>
-                        <textarea name="comment" id="newblog-comment" rows="7"></textarea>
+                        <textarea name="comment" id="newblog-comment" rows="6"></textarea>
                     </div>
                     <button type="submit">ثبت بلاگ</button>
                 </form>
@@ -346,7 +346,7 @@
                 <div class="col">
                     <b>خبر نامه:</b>
                     <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
-                        چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی
+                        و برای شرایط فعلی تکنولوژی
                         مورد نیاز...</p>
                     <input type="text">
                 </div>
@@ -371,13 +371,12 @@
                 <div class="col">
                     <b>توضیحات:</b>
                     <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
-                        چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی
+                        و برای شرایط فعلی تکنولوژی
                         مورد نیاز...</p>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="./javascript/isotope.pkgd.min.js"></script>
     <script src="./javascript/scripts.js"></script>
 </body>
 
