24may last commit

--- a/Assets/index.html
+++ b/Assets/index.html
@@ -337,7 +337,7 @@
                 </form>
             </div>
         </section>
-        <br><br><br><br><br><br><br><br><br>
+        <br><br><br>
     </main>
 
     <footer id="footer" class="padding-x">
@@ -377,6 +377,10 @@
             </div>
         </div>
     </footer>
+    <div id="copyright"
+        style="text-align: center; padding: 10px; background-color: var(--hover); color: var(--secondary--color)">
+        copyright © : Alireza
+        Shahryari (@a4coder in github)</div>
     <script src="./javascript/scripts.js"></script>
 </body>
 
